add module core_storage as micro module app

--- a/modules/core_storage/pubspec.yaml
+++ b/modules/core_storage/pubspec.yaml
@@ -11,12 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  plugin_platform_interface: ^2.0.2
+  flutter_disk_lru_cache: ^1.0.1
+  injectable: ^2.3.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  injectable_generator: ^2.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
