--- a/modules/core_l10n/pubspec.yaml
+++ b/modules/core_l10n/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
+  injectable: ^2.3.0
+  core_storage: 0.0.1-alpha.1
 
 dev_dependencies:
   flutter_test:
