--- a/modules/core_network/pubspec.yaml
+++ b/modules/core_network/pubspec.yaml
@@ -11,18 +11,36 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  plugin_platform_interface: ^2.0.2
+  # modules
+  core_utils: 0.0.1-alpha.1
+  core_ui: 0.0.1-alpha.1
+  core_l10n: 0.0.1-alpha.1
+  core_storage: 0.0.1-alpha.1
+  # packages
+  dio: ^5.2.1+1
+  equatable: ^2.0.5
+  injectable: ^2.3.0
+  json_annotation: ^4.8.1
+  pretty_dio_logger: ^1.3.1
+  retrofit: ^4.0.1
+  stomp_dart_client: ^0.4.4
+  synchronized: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  retrofit_generator: ^7.0.8
+  injectable_generator: ^2.4.0
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
   # This section identifies this Flutter project as a plugin project.
   # The 'pluginClass' specifies the class (in Java, Kotlin, Swift, Objective-C, etc.)
   # which should be registered in the plugin registry. This is required for
