--- a/modules/core_utils/pubspec.yaml
+++ b/modules/core_utils/pubspec.yaml
@@ -11,13 +11,32 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  plugin_platform_interface: ^2.0.2
+  # modules
+  core_l10n: 1.0.0-alpha.1
+  core_network: 1.0.0-alpha.1
+  core_ui: 1.0.0-alpha.1
+  # packages
+  equatable: ^2.0.5
+  logger: ^1.4.0
+  url_launcher: ^6.1.12
+  file_picker: ^5.3.2
+  get_it: ^7.6.0
+  image_picker: ^1.0.1
+  image_cropper: ^5.0.0
+  intl: ^0.18.0
+  path_provider: ^2.0.15
+  image_gallery_saver: ^2.0.3
+  geolocator: ^9.0.2
+  dio: ^5.1.0
+  retrofit: ^4.0.1
+  mask_text_input_formatter: ^2.4.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-
+  mockito: ^5.0.16
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
