--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
 
 
   # Modules Util
+  base_view: 0.0.1-alpha.1
   core_l10n: 0.0.1-alpha.1
   core_network: 0.0.1-alpha.1
   core_storage: 0.0.1-alpha.1
