--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ dependencies:
   shared_preferences: ^2.2.1
   bot_toast: ^4.0.4
   flutter_native_splash: ^2.3.2
+  data_table_2: ^2.5.8
 
 dev_dependencies:
   flutter_test:
