--- a/modules/core_ui/pubspec.yaml
+++ b/modules/core_ui/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_svg: ^2.0.7
   reactive_pinput: ^0.9.0
   flutter_speed_dial: ^7.0.0
+  collection: ^1.17.2
 
 dev_dependencies:
   flutter_test:
