--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ dependencies:
   flutter_native_splash: ^2.3.2
   data_table_2: ^2.5.8
   url_strategy: ^0.2.0
+  skeletonizer: ^0.8.0
 
 dev_dependencies:
   flutter_test:
