--- a/melos.yaml
+++ b/melos.yaml
@@ -27,6 +27,9 @@ scripts:
       fvm dart run flutter_native_splash:create --path=flutter_native_splash.yaml
     env:
       FLUTTER_VERSION: 3.13.2
+  run_debug:
+    description: "run_debug"
+    run: fvm flutter run -d chrome --web-port 5555
   pub:get:
     description: "Sync pub for all modules"
     run: melos exec -- \ fvm flutter pub get
@@ -64,6 +67,7 @@ scripts:
     run: |
       cd modules/core_ui && \
       fvm flutter run -d chrome lib/widgetbook/widgetbook.dart
+
 
   setup_win:
     description: "Install necessary plug-ins and bootstrap the workspace"
