--- a/modules/feature_patient/pubspec.yaml
+++ b/modules/feature_patient/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   auto_route: ^7.7.0
   reactive_forms: ^14.3.0
   data_table_2: ^2.5.8
+  skeletonizer: ^0.8.0
 
 dev_dependencies:
   flutter_test:
