--- a/modules/feature_report/pubspec.yaml
+++ b/modules/feature_report/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   get_it: ^7.6.0
   injectable: ^2.3.0
   auto_route: ^7.7.0
+  skeletonizer: ^0.8.0
 
 dev_dependencies:
   flutter_test:
