--- a/modules/base_view/pubspec.yaml
+++ b/modules/base_view/pubspec.yaml
@@ -15,7 +15,10 @@ dependencies:
   core_storage: 0.0.1-alpha.1
   core_ui: 0.0.1-alpha.1
   core_utils: 0.0.1-alpha.1
+  data_auth: 0.0.1-alpha.1
+  feature_auth: 0.0.1-alpha.1
   auto_route: ^7.7.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
