--- a/modules/core_network/pubspec.yaml
+++ b/modules/core_network/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   stomp_dart_client: ^0.4.4
   synchronized: ^3.1.0
   flutter_native_splash: ^2.3.2
+  get_it: ^7.6.4
 
 dev_dependencies:
   flutter_test:
