--- a/modules/core_network/pubspec.yaml
+++ b/modules/core_network/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   synchronized: ^3.1.0
   flutter_native_splash: ^2.3.2
   get_it: ^7.6.4
+  reactive_forms: ^14.3.0
 
 dev_dependencies:
   flutter_test:
