finish create update medical record in detail patient, and working on create update medical record hospital in detail patient

--- a/modules/feature_patient/pubspec.yaml
+++ b/modules/feature_patient/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   reactive_forms: ^14.3.0
   data_table_2: ^2.5.8
   skeletonizer: ^0.8.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
