--- a/modules/core_ui/pubspec.yaml
+++ b/modules/core_ui/pubspec.yaml
@@ -11,6 +11,11 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  # modules
+  core_utils: 0.0.1-alpha.1
+  core_network: 0.0.1-alpha.1
+  core_l10n: 0.0.1-alpha.1
+  core_storage: 0.0.1-alpha.1
   reactive_forms: ^14.3.0
   mask_text_input_formatter: ^2.4.0
   webview_flutter: ^4.2.2
