--- a/modules/feature_patient/pubspec.yaml
+++ b/modules/feature_patient/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   skeletonizer: ^0.8.0
   intl: ^0.18.1
   animated_toggle_switch: ^0.8.0
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
