--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ dependencies:
   url_strategy: ^0.2.0
   skeletonizer: ^0.8.0
   animated_toggle_switch: ^0.8.0
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
