finish list page menu 医療ビザ管理

--- a/modules/feature_medical_visa/pubspec_overrides.yaml
+++ b/modules/feature_medical_visa/pubspec_overrides.yaml
@@ -18,4 +18,8 @@ dependency_overrides:
     path: ../data_medical_visa
   feature_auth:
     path: ../feature_auth
+  data_patient:
+    path: ../data_patient
+  feature_patient:
+    path: ../feature_patient
 
