--- a/modules/core_utils/pubspec.yaml
+++ b/modules/core_utils/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   core_ui: 0.0.1-alpha.1
   # packages
   equatable: ^2.0.5
-  logger: ^2.0.2+1
+  logger: ^1.3.0
   url_launcher: ^6.1.12
   file_picker: ^6.1.1
   get_it: ^7.6.0
