--- a/modules/core_network/pubspec.yaml
+++ b/modules/core_network/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   # modules
   core_utils: 0.0.1-alpha.1
   # packages
-  dio: ^5.2.1+1
+  dio: ^5.4.0
   equatable: ^2.0.5
   injectable: ^2.3.0
   json_annotation: ^4.8.1
