finish draf UI for L1患者チャット number L1

--- a/modules/feature_chats/pubspec_overrides.yaml
+++ b/modules/feature_chats/pubspec_overrides.yaml
@@ -16,5 +16,7 @@ dependency_overrides:
     path: ../data_auth
   data_hospital:
     path: ../data_hospital
+  data_patient:
+    path: ../data_patient
   feature_auth:
     path: ../feature_auth
