--- a/modules/feature_medical_visa/pubspec.yaml
+++ b/modules/feature_medical_visa/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   get_it: ^7.6.0
   injectable: ^2.3.0
   auto_route: ^7.7.0
+  reactive_forms: ^14.3.0
   skeletonizer: ^0.8.0
 
 dev_dependencies:
