--- a/modules/feature_web_appointment/pubspec.yaml
+++ b/modules/feature_web_appointment/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   get_it: ^7.6.0
   injectable: ^2.3.0
   auto_route: ^7.7.0
-  skeletonizer: ^0.8.0
+  reactive_forms: ^14.3.0
+  skeletonizer: ^0.9.0
 
 dev_dependencies:
   flutter_test:
