--- a/modules/core_ui/pubspec.yaml
+++ b/modules/core_ui/pubspec.yaml
@@ -38,7 +38,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.1
   widgetbook_generator: ^3.0.0
-  build_runner: ^2.4.6
+  build_runner: ^2.4.8
   icon_font_generator: ^4.0.0
 
 flutter:
@@ -55,3 +55,18 @@ flutter:
     - assets/images/1.5x/
     - assets/images/
     - assets/vectors/
+
+  fonts:
+    - family: NotoSansJP
+      fonts:
+        - asset: assets/fonts/NotoSansJP_VariableFont_wght.ttf
+          weight: 400
+        - asset: assets/fonts/NotoSansJP_VariableFont_wght.ttf
+          weight: 500
+        - asset: assets/fonts/NotoSansJP_VariableFont_wght.ttf
+          weight: 600
+        - asset: assets/fonts/NotoSansJP_VariableFont_wght.ttf
+          weight: 700
+    - family: UiIcons
+      fonts:
+        - asset: assets/fonts/UiIcons.ttf
