--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,16 +83,16 @@ dependencies:
   intl: ^0.18.1
   dio: ^5.4.0
   dio_cache_interceptor: ^3.4.2
-  get_it: ^7.6.0
+  get_it: ^7.6.6
   injectable: ^2.3.0
   equatable: ^2.0.5
   pretty_dio_logger: ^1.3.1
-  stomp_dart_client: ^1.0.0
-  synchronized: ^3.1.0
+  stomp_dart_client: ^1.0.2
+  synchronized: ^3.1.0+1
   shared_preferences: ^2.2.1
   bot_toast: ^4.0.4
-  flutter_native_splash: ^2.3.2
-  data_table_2: ^2.5.8
+  flutter_native_splash: ^2.3.9
+  data_table_2: ^2.5.10
   url_strategy: ^0.2.0
   skeletonizer: ^0.9.0
   animated_toggle_switch: ^0.8.0
@@ -108,10 +108,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.1
-  melos: ^3.1.1
+  melos: ^4.0.0
   auto_route_generator: ^7.3.1
-  build_runner: ^2.4.6
-  retrofit_generator: ^8.0.5
+  build_runner: ^2.4.8
+  retrofit_generator: ^8.0.6
   injectable_generator: ^2.4.0
   import_sorter: ^4.6.0
   flutter_launcher_icons: ^0.13.1
