--- a/modules/core_utils/pubspec.yaml
+++ b/modules/core_utils/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   retrofit: ^4.0.1
   mask_text_input_formatter: ^2.4.0
   provider: ^6.0.5
+  jiffy: ^6.2.1
 
 dev_dependencies:
   flutter_test:
