--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -90,13 +90,14 @@ dependencies:
   stomp_dart_client: ^1.0.2
   synchronized: ^3.1.0+1
   shared_preferences: ^2.2.1
-  bot_toast: ^4.0.4
+  bot_toast: ^4.1.3
   flutter_native_splash: ^2.3.10
   data_table_2: ^2.5.10
   url_strategy: ^0.2.0
   skeletonizer: ^1.0.1
   animated_toggle_switch: ^0.8.0
   badges: ^3.1.2
+  jiffy: ^6.2.1
 
 dev_dependencies:
   flutter_test:
