--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,7 @@ dependencies:
   animated_toggle_switch: ^0.8.0
   badges: ^3.1.2
   jiffy: ^6.2.1
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
