--- a/modules/feature_patient/pubspec.yaml
+++ b/modules/feature_patient/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   intl: ^0.18.1
   animated_toggle_switch: ^0.8.0
   badges: ^3.1.2
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
