--- a/modules/feature_report/pubspec.yaml
+++ b/modules/feature_report/pubspec.yaml
@@ -16,12 +16,15 @@ dependencies:
   core_network: 0.0.1-alpha.1
   feature_auth: 0.0.1-alpha.1
   data_auth: 0.0.1-alpha.1
+  data_report: 0.0.1-alpha.1
+
   provider: ^6.0.5
   get_it: ^7.6.7
   injectable: ^2.3.0
   auto_route: ^7.7.0
   reactive_forms: ^14.3.0
   skeletonizer: ^1.0.1
+  flex_color_picker: ^3.3.1
 
 dev_dependencies:
   flutter_test:
