--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,7 @@ dependencies:
   badges: ^3.1.2
   jiffy: ^6.2.1
   file_picker: ^6.1.1
+  flex_color_picker: ^3.3.1
 
 dev_dependencies:
   flutter_test:
