--- a/.gitignore
+++ b/.gitignore
@@ -44,9 +44,10 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-.fvm/flutter_sdk
 /node_modules/
 /.vscode/
 /.run/
 /.firebase/
 
+# FVM Version Cache
+.fvm/
