--- a/melos.yaml
+++ b/melos.yaml
@@ -26,7 +26,7 @@ scripts:
       fvm flutter pub run flutter_launcher_icons -f flutter_launcher_icons.yaml && \
       fvm dart run flutter_native_splash:create --path=flutter_native_splash.yaml
     env:
-      FLUTTER_VERSION: 3.16.9
+      FLUTTER_VERSION: 3.19.5
   run_debug:
     description: "run_debug"
     run: fvm flutter run -d chrome --web-port 5555
@@ -80,7 +80,7 @@ scripts:
       fvm flutter pub run flutter_launcher_icons -f flutter_launcher_icons* && ^
       fvm dart run flutter_native_splash:create --path=flutter_native_splash.yaml
     env:
-      FLUTTER_VERSION: 3.16.9
+      FLUTTER_VERSION: 3.19.5
   build_runner_win:
     description: "Generate *.g.dart files on modules which depends on build_runner"
     run: melos exec --depends-on="build_runner" fvm dart run build_runner build --delete-conflicting-outputs
@@ -104,7 +104,7 @@ scripts:
       melos exec -c 6 --fail-fast -- fvm flutter pub run flutter_launcher_icons -f flutter_launcher_icons*
     packageFilters:
       scope: "medical_tourism_mgt"
-  web-dev:
+  web_dev:
     description: "hosting_web_dev"
     run: fvm flutter build web --release -t lib/main_dev.dart && firebase deploy --only hosting
 
