--- a/modules/core_utils/pubspec.yaml
+++ b/modules/core_utils/pubspec.yaml
@@ -17,14 +17,14 @@ dependencies:
   equatable: ^2.0.5
   logger: ^1.3.0
   url_launcher: ^6.1.12
-  file_picker: ^6.1.1
-  get_it: ^7.6.7
+  file_picker: ^8.0.0+1
+  get_it: ^7.6.8
   image_picker: ^1.0.1
   image_cropper: ^5.0.0
   intl: ^0.18.0
   path_provider: ^2.0.15
   image_gallery_saver: ^2.0.3
-  geolocator: ^10.1.0
+  geolocator: ^11.0.0
   dio: ^5.1.0
   retrofit: ^4.0.1
   mask_text_input_formatter: ^2.4.0
