--- a/modules/feature_patient/pubspec.yaml
+++ b/modules/feature_patient/pubspec.yaml
@@ -17,23 +17,23 @@ dependencies:
   data_auth: 0.0.1-alpha.1
   data_patient: 0.0.1-alpha.1
   provider: ^6.0.5
-  get_it: ^7.6.7
-  injectable: ^2.3.0
-  auto_route: ^7.7.0
-  reactive_forms: ^14.3.0
+  get_it: ^7.6.8
+  injectable: ^2.4.1
+  auto_route: ^7.8.3
+  reactive_forms: ^16.1.1
   data_table_2: ^2.5.10
   skeletonizer: ^1.0.1
   intl: ^0.18.1
   animated_toggle_switch: ^0.8.0
   badges: ^3.1.2
-  file_picker: ^6.1.1
+  file_picker: ^8.0.0+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
-  injectable_generator: ^2.4.0
-  build_runner: ^2.4.8
+  injectable_generator: ^2.6.1
+  build_runner: ^2.4.6
   auto_route_generator: ^7.2.0
 
 # For information on the generic Dart part of this file, see the
