--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,8 +83,8 @@ dependencies:
   intl: ^0.18.1
   dio: ^5.4.0
   dio_cache_interceptor: ^3.4.2
-  get_it: ^7.6.7
-  injectable: ^2.3.0
+  get_it: ^7.6.8
+  injectable: ^2.4.1
   equatable: ^2.0.5
   pretty_dio_logger: ^1.3.1
   stomp_dart_client: ^1.0.2
@@ -98,7 +98,7 @@ dependencies:
   animated_toggle_switch: ^0.8.0
   badges: ^3.1.2
   jiffy: ^6.2.1
-  file_picker: ^6.1.1
+  file_picker: ^8.0.0+1
   flex_color_picker: ^3.3.1
 
 dev_dependencies:
@@ -113,9 +113,9 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   melos: ^5.3.0
   auto_route_generator: ^7.3.1
-  build_runner: ^2.4.8
-  retrofit_generator: ^8.0.6
-  injectable_generator: ^2.4.0
+  build_runner: ^2.4.6
+  retrofit_generator: ^8.0.5
+  injectable_generator: ^2.6.1
   import_sorter: ^4.6.0
   flutter_launcher_icons: ^0.13.1
 
