working on upload file [fix by change to bytes type for web]

--- a/modules/data_patient/pubspec.yaml
+++ b/modules/data_patient/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   core_network: 0.0.1-alpha.1
   core_storage: 0.0.1-alpha.1
   json_annotation: ^4.8.1
+  universal_io: ^2.2.2
 
 dev_dependencies:
   flutter_test:
