--- a/modules/core_network/pubspec.yaml
+++ b/modules/core_network/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   stomp_dart_client: ^1.0.2
   synchronized: ^3.1.0+1
   get_it: ^7.6.8
+  http: ^1.2.1
+  logger: ^1.3.0
 
 dev_dependencies:
   flutter_test:
