--- a/modules/core_utils/pubspec.yaml
+++ b/modules/core_utils/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   equatable: ^2.0.5
   logger: ^1.3.0
   url_launcher: ^6.1.12
-  file_picker: ^8.0.0+1
+  file_picker: ^8.0.1
   get_it: ^7.6.8
   image_picker: ^1.0.1
   image_cropper: ^5.0.0
