--- a/modules/feature_patient/pubspec.yaml
+++ b/modules/feature_patient/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   intl: ^0.18.1
   animated_toggle_switch: ^0.8.0
   badges: ^3.1.2
-  file_picker: ^8.0.0+1
+  file_picker: ^8.0.1
 
 dev_dependencies:
   flutter_test:
