--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,8 +98,10 @@ dependencies:
   animated_toggle_switch: ^0.8.0
   badges: ^3.1.2
   jiffy: ^6.2.1
-  file_picker: ^8.0.0+1
+  file_picker: ^8.0.1
   flex_color_picker: ^3.3.1
+  universal_io: ^2.2.2
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
