--- a/modules/feature_agent/pubspec.yaml
+++ b/modules/feature_agent/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   core_utils: 0.0.1-alpha.1
   core_network: 0.0.1-alpha.1
   feature_auth: 0.0.1-alpha.1
+  feature_patient: 0.0.1-alpha.1
+  data_patient: 0.0.1-alpha.1
   data_auth: 0.0.1-alpha.1
   data_agent: 0.0.1-alpha.1
   provider: ^6.0.5
