--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,6 +102,7 @@ dependencies:
   flex_color_picker: ^3.3.1
   universal_io: ^2.2.2
   http: ^1.2.1
+  mask_text_input_formatter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
