--- a/modules/core_utils/pubspec.yaml
+++ b/modules/core_utils/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   mask_text_input_formatter: ^2.4.0
   provider: ^6.0.5
   jiffy: ^6.2.1
+  flutter_image_compress: ^2.3.0
 
 dev_dependencies:
   flutter_test:
