--- a/modules/feature_process_chart/pubspec.yaml
+++ b/modules/feature_process_chart/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   auto_route: ^7.8.3
   reactive_forms: ^16.1.1
   skeletonizer: ^1.3.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
