--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,6 +103,7 @@ dependencies:
   universal_io: ^2.2.2
   http: ^1.2.1
   mask_text_input_formatter: ^2.9.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
