--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -86,8 +86,8 @@ flutter_native_splash:
   #image_dark_android: assets/splash-invert-android.png
   #image_ios: assets/splash-ios.png
   #image_dark_ios: assets/splash-invert-ios.png
-  image_web: res/app_icon.png
-  image_dark_web: res/app_icon.png
+  image_web: res/splash_screen.png
+  image_dark_web: res/splash_screen.png
   #background_image_android: "assets/background-android.png"
   #background_image_dark_android: "assets/dark-background-android.png"
   #background_image_ios: "assets/background-ios.png"
