--- a/modules/core_ui/pubspec.yaml
+++ b/modules/core_ui/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   reactive_pinput: ^3.0.0
   flutter_speed_dial: ^7.0.0
   collection: ^1.17.2
+  printing: ^5.12.0
 
 dev_dependencies:
   flutter_test:
