--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,6 +104,7 @@ dependencies:
   http: ^1.2.1
   mask_text_input_formatter: ^2.9.0
   flutter_rating_bar: ^4.0.1
+  printing: ^5.12.0
 
 dev_dependencies:
   flutter_test:
