--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,6 +105,7 @@ dependencies:
   mask_text_input_formatter: ^2.9.0
   flutter_rating_bar: ^4.0.1
   printing: ^5.12.0
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
