--- a/modules/core_network/pubspec.yaml
+++ b/modules/core_network/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   get_it: ^7.6.8
   http: ^1.2.1
   logger: ^1.3.0
+  copy_with_extension: ^5.0.4
 
 dev_dependencies:
   flutter_test:
@@ -32,6 +33,7 @@ dev_dependencies:
   retrofit_generator: ^8.0.5
   injectable_generator: ^2.6.1
   json_serializable: ^6.7.1
+  copy_with_extension_gen: ^5.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
