--- a/modules/core_ui/pubspec.yaml
+++ b/modules/core_ui/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   collection: ^1.17.2
   printing: ^5.12.0
+  flutter_pdfview: ^1.3.2
+  image: ^4.2.0
 
 dev_dependencies:
   flutter_test:
