--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -107,6 +107,8 @@ dependencies:
   printing: ^5.12.0
   collection: ^1.18.0
   copy_with_extension: ^5.0.4
+  flutter_pdfview: ^1.3.2
+  image: ^4.2.0
 
 dev_dependencies:
   flutter_test:
