--- a/modules/base_view/pubspec.yaml
+++ b/modules/base_view/pubspec.yaml
@@ -20,12 +20,14 @@ dependencies:
 
   auto_route: any
   provider: any
-  import_sorter: ^4.6.0
+  get_it: ^7.6.8
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
   build_runner: ^2.4.6
+  import_sorter: ^4.6.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
