--- a/modules/core_utils/pubspec.yaml
+++ b/modules/core_utils/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^6.0.5
   jiffy: ^6.2.1
   flutter_image_compress: ^2.3.0
+  package_info_plus: ^8.0.2
 
   reactive_forms: any
   import_sorter: ^4.6.0
