--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,6 +109,7 @@ dependencies:
   copy_with_extension: ^5.0.4
   image: ^4.2.0
   import_sorter: ^4.6.0
+  package_info_plus: ^8.0.2
 
 dev_dependencies:
   flutter_test:
