--- a/melos.yaml
+++ b/melos.yaml
@@ -118,7 +118,7 @@ scripts:
     run: |
       fvm flutter build web --release -t lib/main_dev.dart && \
       cp firebase-dev.json firebase.json && \
-      firebase deploy --only hosting:medical-tourism-dev
+      firebase deploy --only hosting
   web_stage:
     description: "hosting_web_stage"
     run: |
