--- a/modules/base_view/pubspec.yaml
+++ b/modules/base_view/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   auto_route: any
   provider: any
   get_it: ^7.6.8
+  package_info_plus: ^8.0.2
 
 dev_dependencies:
   flutter_test:
