--- a/modules/feature_patient/pubspec.yaml
+++ b/modules/feature_patient/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   file_picker: ^8.0.1
   collection: ^1.18.0
   import_sorter: ^4.6.0
+  pdf: ^3.11.1
 
 dev_dependencies:
   flutter_test:
