--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,6 +110,7 @@ dependencies:
   image: ^4.2.0
   import_sorter: ^4.6.0
   htmltopdfwidgets: ^1.0.4
+  pdf: ^3.11.1
   
 
 dev_dependencies:
@@ -142,8 +143,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/fonts/NotoSansJPRegular.ttf
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
