--- a/modules/feature_patient/pubspec.yaml
+++ b/modules/feature_patient/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   collection: ^1.18.0
   import_sorter: ^4.6.0
   pdf: ^3.11.1
+  excel: ^4.0.6
 
 dev_dependencies:
   flutter_test:
