--- a/modules/core_utils/pubspec.yaml
+++ b/modules/core_utils/pubspec.yaml
@@ -34,10 +34,10 @@ dependencies:
   http: ^1.2.2
   htmltopdfwidgets: ^1.0.4
   pdf: ^3.11.1
-  
-
   reactive_forms: any
   import_sorter: ^4.6.0
+  archive: ^3.6.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
