--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,7 +110,8 @@ dependencies:
   htmltopdfwidgets: ^1.0.4
   pdf: ^3.11.1
   excel: ^4.0.6
-  
+  archive: ^3.6.1
+
 
 dev_dependencies:
   flutter_test:
