--- a/modules/core_utils/pubspec.yaml
+++ b/modules/core_utils/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   reactive_forms: any
   import_sorter: ^4.6.0
   archive: ^3.6.1
+  webview_flutter_web: ^0.2.3+2
 
 dev_dependencies:
   flutter_test:
