--- a/modules/core_utils/pubspec.yaml
+++ b/modules/core_utils/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   import_sorter: ^4.6.0
   archive: ^3.6.1
   webview_flutter_web: ^0.2.3+2
+  webview_flutter_platform_interface: ^2.10.0
 
 dev_dependencies:
   flutter_test:
