--- a/modules/core_ui/pubspec.yaml
+++ b/modules/core_ui/pubspec.yaml
@@ -62,24 +62,24 @@ flutter:
   fonts:
     - family: NotoSansJP
       fonts:
-        - asset: assets/fonts/NotoSansJPExtraLight.ttf
-          weight: 100
-        - asset: assets/fonts/NotoSansJPLight.ttf
-          weight: 200
-        - asset: assets/fonts/NotoSansJPThin.ttf
-          weight: 300
         - asset: assets/fonts/NotoSansJPRegular.ttf
-          weight: 400
-        - asset: assets/fonts/NotoSansJPMedium.ttf
-          weight: 500
-        - asset: assets/fonts/NotoSansJPSemiBold.ttf
-          weight: 600
         - asset: assets/fonts/NotoSansJP_Bold.ttf
           weight: 700
-        - asset: assets/fonts/NotoSansJPExtraBold.ttf
-          weight: 800
-        - asset: assets/fonts/NotoSansJPBlack.ttf
-          weight: 900
+    - family: NotoSans_JP
+      fonts:
+        - asset: assets/fonts/NotoSans_JP.ttf
+    - family: Noto_Sans_TC
+      fonts:
+        - asset: assets/fonts/Noto_Sans_TC.ttf
+    - family: Noto_Sans_ZH
+      fonts:
+        - asset: assets/fonts/Noto_Sans_ZH.ttf
+    - family: Roboto_VN
+      fonts:
+        - asset: assets/fonts/Roboto_VN.ttf
+    - family: Open_Sans_EN
+      fonts:
+        - asset: assets/fonts/Open_Sans_EN.ttf
     - family: UiIcons
       fonts:
         - asset: assets/fonts/UiIcons.ttf
