--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -146,15 +146,6 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/fonts/NotoSansJPRegular.ttf
-    - assets/fonts/NotoSans_JP.ttf
-    - assets/fonts/Noto_Sans_TC.ttf
-    - assets/fonts/Noto_Sans_ZH.ttf
-    - assets/fonts/Roboto_VN.ttf
-    - assets/fonts/Open_Sans_EN.ttf
-    - assets/fonts/NotoSansJP_Bold.ttf
-    
     
   #   - images/a_dot_ham.jpeg
 
@@ -169,17 +160,27 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: NotoSansJP
+      fonts:
+        - asset: assets/fonts/NotoSansJPRegular.ttf
+        - asset: assets/fonts/NotoSansJP_Bold.ttf
+          weight: 700
+    - family: NotoSans_JP
+      fonts:
+        - asset: assets/fonts/NotoSans_JP.ttf
+    - family: Noto_Sans_TC
+      fonts:
+        - asset: assets/fonts/Noto_Sans_TC.ttf
+    - family: Noto_Sans_ZH
+      fonts:
+        - asset: assets/fonts/Noto_Sans_ZH.ttf
+    - family: Roboto_VN
+      fonts:
+        - asset: assets/fonts/Roboto_VN.ttf
+    - family: Open_Sans_EN
+      fonts:
+        - asset: assets/fonts/Open_Sans_EN.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
