--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,7 @@ dependencies:
   js: ^0.6.7
   webview_flutter_web: ^0.2.3+2
   webview_flutter_platform_interface: ^2.10.0
+  reactive_date_time_picker: ^4.0.0
 
 
 dev_dependencies:
