--- a/modules/feature_patient/pubspec.yaml
+++ b/modules/feature_patient/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   core_network: 0.0.1-alpha.1
   data_auth: 0.0.1-alpha.1
   data_patient: 0.0.1-alpha.1
+  data_web_appointment: 0.0.1-alpha.1
+  feature_web_appointment: 0.0.1-alpha.1
+
   provider: ^6.0.5
   get_it: ^7.6.8
   injectable: ^2.4.1
