--- a/modules/feature_agent/pubspec_overrides.yaml
+++ b/modules/feature_agent/pubspec_overrides.yaml
@@ -1,3 +1,4 @@
+# melos_managed_dependency_overrides: data_web_appointment,feature_web_appointment
 # melos_managed_dependency_overrides: data_biz,core_network,core_ui,core_storage,core_utils,core_l10n
 dependency_overrides:
   base_view:
@@ -22,3 +23,7 @@ dependency_overrides:
     path: ../data_patient
   feature_patient:
     path: ../feature_patient
+  data_web_appointment:
+    path: ..\\data_web_appointment
+  feature_web_appointment:
+    path: ..\\feature_web_appointment
