--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -115,6 +115,7 @@ dependencies:
   webview_flutter_web: ^0.2.3+2
   webview_flutter_platform_interface: ^2.10.0
   reactive_date_time_picker: ^4.0.0
+  flutter_pdfview: ^1.4.0
 
 
 dev_dependencies:
