--- a/modules/feature_agent/pubspec_overrides.yaml
+++ b/modules/feature_agent/pubspec_overrides.yaml
@@ -24,6 +24,6 @@ dependency_overrides:
   feature_patient:
     path: ../feature_patient
   data_web_appointment:
-    path: ..\\data_web_appointment
+    path: ../data_web_appointment
   feature_web_appointment:
-    path: ..\\feature_web_appointment
+    path: ../feature_web_appointment
