--- a/melos.yaml
+++ b/melos.yaml
@@ -122,6 +122,9 @@ scripts:
 
 
 
+  socket_chat:
+    description: "Generate socket_chat"
+    run: melos exec --scope="socket_chat" -- fvm dart run build_runner build --delete-conflicting-outputs
   core_network:
     description: "Generate core_network"
     run: melos exec --scope="core_network" -- fvm dart run build_runner build --delete-conflicting-outputs
@@ -203,19 +206,19 @@ scripts:
     description: "hosting_web_dev"
     run: |
       cp firebase-dev.json firebase.json && \
-      fvm flutter build web --release --web-renderer html -t lib/main_dev.dart && \
+      fvm flutter build web --release -t lib/main_dev.dart && \
       firebase deploy --only hosting
 
   web_stage:
     description: "hosting_web_stage"
     run: |
       cp firebase-stage.json firebase.json && \
-      fvm flutter build web --release --web-renderer html -t lib/main_stage.dart && \
+      fvm flutter build web --release -t lib/main_stage.dart && \
       firebase deploy --only hosting:medical-tourism-stage
 
   web_prod:
     description: "hosting_web_stage"
     run: |
       cp firebase-prod.json firebase.json && \
-      fvm flutter build web --release --web-renderer html -t lib/main_prod.dart && \
+      fvm flutter build web --release -t lib/main_prod.dart && \
       firebase deploy --only hosting:medical-tourism-prod
