--- a/modules/base_view/pubspec_overrides.yaml
+++ b/modules/base_view/pubspec_overrides.yaml
@@ -14,3 +14,13 @@ dependency_overrides:
     path: ../data_auth
   feature_auth:
     path: ../feature_auth
+  feature_chats:
+    path: ../feature_chats
+  data_chats:
+    path: ../data_chats
+  socket_chat:
+    path: ../socket_chat
+  data_patient:
+    path: ../data_patient
+  data_hospital:
+    path: ../data_hospital
