--- a/modules/data_chats/pubspec.yaml
+++ b/modules/data_chats/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   injectable: ^2.4.1
   core_network: 0.0.1-alpha.1
   core_storage: 0.0.1-alpha.1
+  socket_chat: 0.0.1-alpha.1
   json_annotation: ^4.8.1
   import_sorter: ^4.6.0
 
