--- a/modules/feature_medical_visa/pubspec_overrides.yaml
+++ b/modules/feature_medical_visa/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: core_network,core_storage,core_ui,core_utils,data_authz,feature_authz,feature_onboard,feature_biz,core_l10n,data_payments
+# melos_managed_dependency_overrides: core_network,core_storage,core_ui,core_utils,data_authz,feature_authz,feature_onboard,feature_biz,core_l10n,data_payments,data_web_appointment,feature_web_appointment
 dependency_overrides:
   base_view:
     path: ../base_view
@@ -22,4 +22,8 @@ dependency_overrides:
     path: ../data_patient
   feature_patient:
     path: ../feature_patient
+  data_web_appointment:
+    path: ../data_web_appointment
+  feature_web_appointment:
+    path: ../feature_web_appointment
 
