--- a/modules/feature_auth/pubspec_overrides.yaml
+++ b/modules/feature_auth/pubspec_overrides.yaml
@@ -1,3 +1,4 @@
+# melos_managed_dependency_overrides: data_chats,data_hospital,data_patient,data_web_appointment,feature_chats,feature_patient,feature_web_appointment,socket_chat
 # melos_managed_dependency_overrides: core_network,core_storage,core_ui,core_utils,data_authz,feature_authz,feature_onboard,feature_biz,core_l10n,data_payments
 dependency_overrides:
   base_view:
@@ -14,3 +15,19 @@ dependency_overrides:
     path: ../core_utils
   data_auth:
     path: ../data_auth
+  data_chats:
+    path: ..\\data_chats
+  data_hospital:
+    path: ..\\data_hospital
+  data_patient:
+    path: ..\\data_patient
+  data_web_appointment:
+    path: ..\\data_web_appointment
+  feature_chats:
+    path: ..\\feature_chats
+  feature_patient:
+    path: ..\\feature_patient
+  feature_web_appointment:
+    path: ..\\feature_web_appointment
+  socket_chat:
+    path: ..\\socket_chat
