--- a/modules/feature_chats/pubspec_overrides.yaml
+++ b/modules/feature_chats/pubspec_overrides.yaml
@@ -1,3 +1,4 @@
+# melos_managed_dependency_overrides: data_web_appointment,feature_patient,feature_web_appointment
 # melos_managed_dependency_overrides: core_network,core_storage,core_ui,core_utils,data_authz,feature_authz,feature_onboard,feature_biz,core_l10n,data_payments
 dependency_overrides:
   base_view:
@@ -24,3 +25,9 @@ dependency_overrides:
     path: ../data_chats
   socket_chat:
     path: ../socket_chat
+  data_web_appointment:
+    path: ..\\data_web_appointment
+  feature_patient:
+    path: ..\\feature_patient
+  feature_web_appointment:
+    path: ..\\feature_web_appointment
