--- a/modules/feature_medical_visa/pubspec_overrides.yaml
+++ b/modules/feature_medical_visa/pubspec_overrides.yaml
@@ -1,3 +1,4 @@
+# melos_managed_dependency_overrides: data_chats,data_hospital,feature_chats,socket_chat
 # melos_managed_dependency_overrides: core_network,core_storage,core_ui,core_utils,data_authz,feature_authz,feature_onboard,feature_biz,core_l10n,data_payments,data_web_appointment,feature_web_appointment
 dependency_overrides:
   base_view:
@@ -26,4 +27,12 @@ dependency_overrides:
     path: ../data_web_appointment
   feature_web_appointment:
     path: ../feature_web_appointment
+  data_chats:
+    path: ..\\data_chats
+  data_hospital:
+    path: ..\\data_hospital
+  feature_chats:
+    path: ..\\feature_chats
+  socket_chat:
+    path: ..\\socket_chat
 
