--- a/modules/core_ui/pubspec.yaml
+++ b/modules/core_ui/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   intl: ^0.18.1
   flutter_pdfview: ^1.4.0
   libphonenumber: ^2.0.2
+  pdf_render: ^1.4.12
+  flutter_cache_manager: ^3.4.1
 
 dev_dependencies:
   flutter_test:
