--- a/modules/feature_web_appointment/pubspec_overrides.yaml
+++ b/modules/feature_web_appointment/pubspec_overrides.yaml
@@ -24,10 +24,10 @@ dependency_overrides:
   feature_patient:
     path: ../feature_patient
   data_chats:
-    path: ..\\data_chats
+    path: ../data_chats
   data_hospital:
-    path: ..\\data_hospital
+    path: ../data_hospital
   feature_chats:
-    path: ..\\feature_chats
+    path: ../feature_chats
   socket_chat:
-    path: ..\\socket_chat
+    path: ../socket_chat
