--- a/modules/base_view/pubspec_overrides.yaml
+++ b/modules/base_view/pubspec_overrides.yaml
@@ -26,8 +26,8 @@ dependency_overrides:
   data_hospital:
     path: ../data_hospital
   data_web_appointment:
-    path: ..\\data_web_appointment
+    path: ../data_web_appointment
   feature_patient:
-    path: ..\\feature_patient
+    path: ../feature_patient
   feature_web_appointment:
-    path: ..\\feature_web_appointment
+    path: ../feature_web_appointment
