--- a/modules/data_chats/pubspec_overrides.yaml
+++ b/modules/data_chats/pubspec_overrides.yaml
@@ -2,7 +2,7 @@
 # melos_managed_dependency_overrides: core_network,core_storage,core_ui,core_utils,core_l10n
 dependency_overrides:
   base_view:
-    path: ..\\base_view
+    path: ../base_view
   core_l10n:
     path: ../core_l10n
   core_network:
@@ -14,20 +14,20 @@ dependency_overrides:
   core_utils:
     path: ../core_utils
   data_auth:
-    path: ..\\data_auth
+    path: ../data_auth
   data_hospital:
-    path: ..\\data_hospital
+    path: ../data_hospital
   data_patient:
-    path: ..\\data_patient
+    path: ../data_patient
   data_web_appointment:
-    path: ..\\data_web_appointment
+    path: ../data_web_appointment
   feature_auth:
-    path: ..\\feature_auth
+    path: ../feature_auth
   feature_chats:
-    path: ..\\feature_chats
+    path: ../feature_chats
   feature_patient:
-    path: ..\\feature_patient
+    path: ../feature_patient
   feature_web_appointment:
-    path: ..\\feature_web_appointment
+    path: ../feature_web_appointment
   socket_chat:
     path: ../socket_chat
