--- a/modules/feature_chats/pubspec_overrides.yaml
+++ b/modules/feature_chats/pubspec_overrides.yaml
@@ -26,8 +26,8 @@ dependency_overrides:
   socket_chat:
     path: ../socket_chat
   data_web_appointment:
-    path: ..\\data_web_appointment
+    path: ../data_web_appointment
   feature_patient:
-    path: ..\\feature_patient
+    path: ../feature_patient
   feature_web_appointment:
-    path: ..\\feature_web_appointment
+    path: ../feature_web_appointment
