--- a/modules/core_ui/pubspec.yaml
+++ b/modules/core_ui/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   flutter_cache_manager: ^3.4.1
   get_it: ^7.6.8
   pdfrx: ^1.0.84
+  webview_flutter_web: ^0.2.3+2
+  webview_flutter_platform_interface: ^2.10.0
+  flutter_inappwebview: ^6.0.0
+
 
 dev_dependencies:
   flutter_test:
